# landscape-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.api  README.md  commands.md  data.dvc  docker-compose.yml  dvc.yaml  main.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: intel.yaml
configs/export/: onnx.yaml
configs/inference/: default.yaml
configs/mlflow/: default.yaml
configs/model/: resnet18.yaml
configs/training/: default.yaml
configs/triton/: default.yaml
dags/: landscape_training_pipeline.py
landscape_classifier/: commands.py  config.py  dvc_utils.py  export.py  triton.py
landscape_classifier/inference/: main.py  predictor.py  utils.py
landscape_classifier/training/: artifacts.py  config.py  dataset.py  evaluate.py  lit_model.py  logger.py  model.py  train.py  utils.py
tests/: test_config.py  test_data_and_inference.py
triton_model_repository/landscape_classifier/: config.pbtxt
